--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo novemente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">mood</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email" required maxlength="30" minlength="5">
+                         <label for="ilogin">Login</label>
+                        
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">key</span>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="30"> 
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha<span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
